--- a/app_modules/FacturacionProveedores/reports/factura.html
+++ b/app_modules/FacturacionProveedores/reports/factura.html
@@ -11,7 +11,13 @@
         <title>Orden Compra</title>        
         <link rel="stylesheet" href="{{:style}}" />       
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css' />
-        <style>            
+        <style>   
+            
+            /*@page {size: 215,9 279,4 landscape; }*/
+        @media print {
+            tr.page-break  { page-break-before: avoid; }
+        }
+
 
             body {
                 font-family: 'Open Sans', sans-serif;
@@ -100,6 +106,7 @@
                 </div>
             </div>
             <hr />
+   
             <div class="row pad-top-botm">
                 <div class="col-lg-12 col-md-12 col-sm-12">
                     <div class="">
@@ -120,7 +127,7 @@
                             </thead>
                             <tbody>
                                 {{for detalle}}
-                                <tr>
+                                <tr class="page-break">
                                     <td align='center'>{{:recepcion_parcial_id}}</td>
                                     <td align='left'><strong><u>{{:codigo_producto}}</u></strong>-{{:descripcion}}</td>
                                     <td align='center'>{{:lote}}</td>
