formato de moneda a notas de servicio

--- a/app_modules/CajaGeneral/reports/facturaConceptosPdf.html
+++ b/app_modules/CajaGeneral/reports/facturaConceptosPdf.html
@@ -143,7 +143,7 @@
                                     <tr>
 
                                         <td align="left">
-                                            <table align="center" width="100%" class="modulo_list_claro" style="border:0px solid #000000;font-size:7px"">
+                                            <table align="center" width="100%" class="modulo_list_claro" style="border:0px solid #000000;font-size:7px">
                                                 <tr><td>NOMBRE QUIEN RECIBE : </td>
                                                 </tr>
                                                 <tr>
