correcion de impresion doc IPF

--- a/app_modules/MovimientosBodega/reportes/documentoI008.html
+++ b/app_modules/MovimientosBodega/reportes/documentoI008.html
@@ -57,7 +57,7 @@
                     <hr />
                     <table width="90%"  class="label" border ='0' style="font-family: sans_serif, Verdana, helvetica, Arial; font-size:12px">
                         <tr >
-                            <td colspan='2' align="center">DATOS ADICIONALES</td>
+                            <td colspan='3' align="center">DATOS ADICIONALES</td>
                         </tr>
                         <tr>
                             <td >BODEGA ORIGEN</td>
@@ -67,7 +67,7 @@
                             <td >DOCUMENTO DE DESPACHO</td>
                             <td colspan='2'> {{:cabecerae.numeroEfc}}</td> 
                             <td >PEDIDO </td>
-                            <td colspan='3'> {{:cabecerae.fecha_registro}}</td>  
+                            <td colspan='3'> {{:cabecerae.pedido}}</td>  
                         </tr>
                     </table>
                     <hr />
