--- a/app_modules/FacturacionClientes/reports/facturaGeneradaDetallePDF.html
+++ b/app_modules/FacturacionClientes/reports/facturaGeneradaDetallePDF.html
@@ -34,6 +34,7 @@
         </style>        
     </head>
     <body>
+        <img src="{#asset /logocliente.png @encoding=dataURI}" style="display:none"/>
         <table width="100%" align="center" style="border:1px solid #000000;" rules="all">
             <tr>
                 <td>
