--- a/app_modules/Notas/reports/notaFacturaPdf.html
+++ b/app_modules/Notas/reports/notaFacturaPdf.html
@@ -62,6 +62,7 @@
         </style>
     </head>
     <body>
+        <img src="{#asset /logocliente.png @encoding=dataURI}" style="display:none"/>
             <table width="100%" align="center">
                 <tr>
                     <td align='center' width="85%" style="border:1px solid #000000;font-size:8px">
