--- a/app_modules/Productos/reports/ajuste_sube_costo.html
+++ b/app_modules/Productos/reports/ajuste_sube_costo.html
@@ -104,7 +104,7 @@
         <br>
 
         <br>
-        <div id="btnImprimir"><input type="button" name="imprimir" value="Imprimir" onclick="imprimir()"></div>
+        <!-- <div id="btnImprimir"><input type="button" name="imprimir" value="Imprimir" onclick="imprimir()"></div> -->
 
     <footer>
         <table class="modulo_table_list" align="center" border="1" style="font-family: sans_serif, Verdana, helvetica, Arial;  font-size:10px; border-collapse :collapse;">
