Modificacion de imagen notas

--- a/app_modules/CajaGeneral/reports/facturaConceptosPdf.html
+++ b/app_modules/CajaGeneral/reports/facturaConceptosPdf.html
@@ -61,6 +61,7 @@
         </style>
     </head>
     <body>
+    <img src="{#asset /logocliente.png @encoding=dataURI}" style="display:none"/>
 	<hr noshade="noshade"  />
 	<table class="table table-striped" width='100%' style="font-size: 10px; line-height: 1;" align="center" >
 	    <tr>
