--- a/app_modules/CajaGeneral/reports/facturaConceptos.html
+++ b/app_modules/CajaGeneral/reports/facturaConceptos.html
@@ -61,13 +61,15 @@
         </style>
     </head>
     <body>
+	<img src="{#asset /logocliente.png @encoding=dataURI}" style="display:none"/>
 	<div class="box">
                     
         </div>
 	<table class="table table-bordered" width='100%' style="font-size: 10px; line-height: 1;" align="center" >
 	    <tr>
 		<td colspan='4' >
-		     <img src="{{:serverUrl}}images/logocliente.png" width="300" height="80" /> 
+			<img src="{#asset /logocliente.png @encoding=dataURI}" width="300" height="80" style="display:block"/>
+			<!-- <img src="{{:serverUrl}}images/logocliente.png" width="300" height="80" /> -->
 		</td>
 	    </tr>
 	    <tr>
