--- a/app_modules/Productos/reports/ajuste_sube_costo.html
+++ b/app_modules/Productos/reports/ajuste_sube_costo.html
@@ -52,10 +52,6 @@
                             <td>FECHA:</td>
                             <td colspan="3">{{:fecha_actual}}</td>
                         </tr>
-                        <tr>
-                            <td>OBSERVACIÓN:</td>
-                            <td colspan="5"> </td>
-                        </tr>
                         <!--
                         <tr>
                             <td>USUARIO:</td>
@@ -98,14 +94,10 @@
         </tbody></table>
         <br>
         <div>
-            <p class="label">Revisado Por: ________________________________________ </p>
+            <p class="label">Aprobado Por: <u> {{:aprobacion}}</u></p>
         </div>
-        <br>
-        <br>
-
-        <br>
+        <br><br><br>
         <!-- <div id="btnImprimir"><input type="button" name="imprimir" value="Imprimir" onclick="imprimir()"></div> -->
-
     <footer>
         <table class="modulo_table_list" align="center" border="1" style="font-family: sans_serif, Verdana, helvetica, Arial;  font-size:10px; border-collapse :collapse;">
             <tbody><tr>
