--- a/app_modules/Productos/reports/ajuste_sube_costo.html
+++ b/app_modules/Productos/reports/ajuste_sube_costo.html
@@ -48,7 +48,7 @@
                         </tr>
                         <tr>
                             <td>NUMERACION:</td>
-                            <td colspan="1"> {{:prefijo}}-{{:nueva_numeracion}}</td>
+                            <td colspan="1"> {{:nueva_numeracion}}</td>
                             <td>FECHA:</td>
                             <td colspan="3">{{:fecha_actual}}</td>
                         </tr>
