--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,15 @@
-<script>location.href = "/dusoft_duana/";</script>
+
+<!-- saved from url=(0036)http://duanaltda.net/daasdsa%20dsada -->
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252"><title>404 Not Found</title></head>
+<body>
+<center><h1>404 Not Found</h1></center>
+<hr><center>nginx/1.15.8</center>
+
+
+<!-- a padding to disable MSIE and Chrome friendly error page -->
+<!-- a padding to disable MSIE and Chrome friendly error page -->
+<!-- a padding to disable MSIE and Chrome friendly error page -->
+<!-- a padding to disable MSIE and Chrome friendly error page -->
+<!-- a padding to disable MSIE and Chrome friendly error page -->
+<!-- a padding to disable MSIE and Chrome friendly error page -->
+</body></html>
