--- a/app_modules/DispensacionHc/reports/medicamentosDispensados.html
+++ b/app_modules/DispensacionHc/reports/medicamentosDispensados.html
@@ -49,18 +49,18 @@
                             <td  colspan="1" align="left">SEXO: </td>
                             <td  colspan="1" align="left">{{:detalle.sexo}}
                             </td>
-                        </tr> //-->
+                        </tr> -->
                     <!--   <tr>
                             <td  align="left">TELEFONO:</td>
                             <td  align="left" > {{:detalle.residencia_telefono}} </td>
 
                             <td  colspan="1" align="left">DIRECCION: </td>
                             <td  colspan="1" align="left">{{:detalle.residencia_direccion}}</td>
-                        </tr> //-->
+                        </tr> -->
                      <!--   <tr>
                             <td  align="left">PROFESIONAL:</td>
                             <td  align="left"  colspan="3" >  {{:profesional.tipo_id_tercero}} {{:profesional.tercero_id}}  &nbsp; - {{:profesional.nombre}} {{:profesional.descripcion}}
-                        </tr> //-->
+                        </tr> -->
 
                         <tr>
                             <td  align="left">TIPO FORMULA:</td>
@@ -84,20 +84,20 @@
                     <tr >
                       <!--  <td width="13%" ><U>FECHA ENTREGA</U></td> 
 
-                        <td width="13%" ><U>CODIGO</U></td> //-->
+                        <td width="13%" ><U>CODIGO</U></td> -->
                         <td  ><U>MEDICAMENTO</U></td>
                         <td width="5%" ><U>CANT</U></td>
-                        <td width="13%" ><U>FECHA VENC</U></td> //
+                        <td width="13%" ><U>FECHA VENC</U></td> 
                         <td width="13%" ><U>LOTE</U></td>
                   </tr>
 
               {{for productosDispensados}}
                             <tr>
                               <!--  <td >{{:fecha_entrega}}</td> 
-                                <td >{{:codigo_producto}}</td>//-->
+                                <td >{{:codigo_producto}}</td>-->
                                 <td  >{{:descripcion_prod}}</td>
                                 <td >{{:numero_unidades}}</td>
-                                <td >{{:fecha_vencimiento}}</td> //
+                                <td >{{:fecha_vencimiento}}</td> 
                                 <td >{{:lote}}</td>
                                 <td>{{:total}}</td>
                             </tr>
