--- a/public/dusoft_duana/dispensacionHc/index.html
+++ b/public/dusoft_duana/dispensacionHc/index.html
@@ -10,7 +10,6 @@
         <link href="../../stylesheets/select.min.css" rel="stylesheet" />
         <link href="../../stylesheets/charts/nv.d3.css" rel="stylesheet" />
         <link href="css/style.css" rel="stylesheet">
-        <link href="css/style.css" rel="stylesheet">
          <!--script src="../../javascripts/require/require.js" data-main="dist/main.js"></script-->
 
         <script src="../../javascripts/require/require.js" data-main="main-dev"></script>        
@@ -18,13 +17,12 @@
     </head>
 
     <body class="body">
-        <div class="row" class="header" ng-include src="'../includes/header/header.html'" ng-controller="HeaderController" ></div>
-
+        <div class="row" class="header" ng-include src="'../includes/header/header.html'" ng-controller="" ></div>
 
         <div class="loader"  ng-include src="'../includes/loader/loader.html'"></div>
 
         <div class="row contenedor">
-            <div ng-include src="'../includes/menu/menu.html'" class="col-md-3 contenedormenu cerrarmenu" ng-controller="menucontroller"></div>
+            <div ng-include src="'../includes/menu/menu.html'" class="col-md-3 contenedormenu cerrarmenu" ng-controller=""></div>
 
             <div  ng-include src="'../includes/content/content.html'" class="contenedorDerecho"></div>          
         </div> 
