--- a/app_modules/PlanillasDespachos/reports/planilla_despacho.html
+++ b/app_modules/PlanillasDespachos/reports/planilla_despacho.html
@@ -121,7 +121,7 @@
                     </tr>
                     <tr>
                         <td style="width: 50%" colspan="3">
-                            <h6><strong>{{:tercero}}</strong></h6>CALLE 6N No. 12 - 47</td>
+                            <h6><strong>{{:tercero}}</strong></h6> {{:direccion}}</td>
                         <td style="width: 50%" colspan="3" class="table-border">
                             <div class="form-group">
                                 <label class="" for="inputBody">Comentarios del despacho</label>                                
