--- a/public/dusoft_duana/dispensacionHc/index.html
+++ b/public/dusoft_duana/dispensacionHc/index.html
@@ -17,7 +17,7 @@
     </head>
 
     <body class="body">
-        <div class="row" class="header" ng-include src="'../includes/header/header.html'" ng-controller="HeaderController" ></div>
+        <div class="row header" ng-include src="'../includes/header/header.html'" ng-controller="HeaderController" ></div>
 
 
         <div class="loader"  ng-include src="'../includes/loader/loader.html'"></div>
