--- a/public/dusoft_duana/dispensacionHc/index.html
+++ b/public/dusoft_duana/dispensacionHc/index.html
@@ -23,7 +23,7 @@
         <div class="loader"  ng-include src="'../includes/loader/loader.html'"></div>
 
         <div class="row contenedor">
-            <div ng-include src="'../includes/menu/menu.html'" class="col-md-3 contenedormenu cerrarmenu" ng-controller=""></div>
+            <div ng-include src="'../includes/menu/menu.html'" class="col-md-3 contenedormenu cerrarmenu" ng-controller="menucontroller"></div>
 
             <div  ng-include src="'../includes/content/content.html'" class="contenedorDerecho"></div>          
         </div> 
