--- a/app_modules/MovimientosBodega/E008/reports/despacho.html
+++ b/app_modules/MovimientosBodega/E008/reports/despacho.html
@@ -114,7 +114,7 @@
                 <td class='title' >Empresa</td><td>{{:encabezado.nombre_empresa_destino}}</td>
                 <td class='title' >Usuario</td><td>{{:encabezado.nombre_usuario}}</td>
                 <td class='title' >Imprime</td><td>{{:encabezado.usuario_imprime}}</td>
-                <td colspan="3"><h3>{{:encabezado.departamento.valor}}</h3></td>
+                <td colspan="3"><h3>{{:encabezado.departamentos.valor}}</h3></td>
             </tr>
             <tr>
                 <td class='title'>Bodega</td><td>{{:encabezado.nombre_bodega_destino}}</td>
