se retira la ciudad de la planilla despacho

--- a/app_modules/PlanillasDespachos/reports/planilla_despacho.html
+++ b/app_modules/PlanillasDespachos/reports/planilla_despacho.html
@@ -105,12 +105,12 @@
                     <tr>
                         <td  style="width: 150px"><b>Transpotador (a):</b></td>
                         <td>{{:planilla_despacho.nombre_transportadora }} {{:planilla_despacho.numero_placa_externo}}</td>
-                        <td > <b>Guia Nro :</b> {{:planilla_despacho.tipo_planilla}}-{{:planilla_despacho.numero_guia}}</td>                            
+                        <td > <b>Guia Nro :</b> {{:planilla_despacho.numero_guia}}</td>                            
                     </tr>
                     <tr>
                         <td ><b>Fecha Salida :</b></td>
                         <td >{{:planilla_despacho.fecha_despacho}}</td>
-                        <td ></td>                            
+                        <td > <b>Tipo Guia :</b> {{:planilla_despacho.tipo_planilla}}</td>                              
                     </tr>                        
                 </table>  
 
