se agrega el campo de costo a los pedidos y a la cotizacion

--- a/app_modules/PlanillasDespachos/reports/planilla_despacho.html
+++ b/app_modules/PlanillasDespachos/reports/planilla_despacho.html
@@ -59,21 +59,27 @@
                 /*border: 1px solid black;*/
                 border: none;
                 border-collapse: collapse;
+                page-break-inside: avoid; 
+                /*white-space: nowrap;*/
             }
             td {
+                page-break-inside: avoid;
                 /*font-size: 8px;*/
             }
 
             table.table-border{
                 border: 1px solid black;
+                page-break-inside: avoid;
             }
 
             .table-border{
                 border: 1px solid black;
+                page-break-inside: avoid;
             }
 
             .table-border td{
                 border: 1px solid black;
+                page-break-inside: avoid;
             }
 
             .footer{
