cambio planilla despachos

--- a/app_modules/PlanillasDespachos/reports/planilla_despacho.html
+++ b/app_modules/PlanillasDespachos/reports/planilla_despacho.html
@@ -99,9 +99,10 @@
         </style>
     </head>
     <body>
+        <img src="{#asset /logocliente.png @encoding=dataURI}" style="display:none"/>
         <div class="container">
             <div  class="row  " style="margin-top: 13px;">
-                <table class="table" width='100%'>                        
+<!--                <table class="table" width='100%'>                        
                     <tr>
                         <td style="width: 150px">
                             <img src="{{:serverUrl}}images/logo.png" style="padding-bottom:20px;" width="120px" height="50px" /> 
@@ -118,7 +119,7 @@
                         <td >{{:planilla_despacho.fecha_despacho}}</td>
                         <td > <b>Tipo Guia :</b> {{:planilla_despacho.tipo_planilla}}</td>                              
                     </tr>                        
-                </table>  
+                </table>  -->
 
                 {{for documentos_planilla}}
                 <table class="table" width='100%'>                        
