--- a/app_modules/MovimientosBodega/E008/reports/rotulos.html
+++ b/app_modules/MovimientosBodega/E008/reports/rotulos.html
@@ -38,13 +38,13 @@
     <body>
         {{for detalle}}
         <div class="height:50%">
-            <div class="cabecera"><span class="departamento">{{:departamento}}</span></div>
+            <div class="cabecera"><span class="departamento">Fecha Impresion: {{:fecha}}</span></div>
             <div>DESTINATARIO:</div>
             <h2>{{:cliente}}</h2>
             <div>SEDE:</div>
-            <h2>{{:sede}}</h2>
+            <h3 align="center">{{:sede}}</h3>
             <div>DIRECCION:</div>
-            <h2>{{:direccion}}</h2>
+            <h3 align="center">{{:direccion}}</h3>
             <div class="documentos">DOCUMENTO: <b>{{:documentoDespacho.prefijo}} - {{:documentoDespacho.numero}}</b></div>
             
             <!--span class="numero_caja_span">NUMERO </span-->
@@ -61,13 +61,13 @@
             {{/if}}-->
         </div>
         <div class="height:50%">
-            <div class="cabecera"><span class="departamento">{{:departamento}}</span></div>
+            <div class="cabecera"><span class="departamento">Fecha Impresion: {{:fecha}}</span></div>
             <div>DESTINATARIO:</div>
             <h2>{{:cliente}}</h2>
             <div>SEDE:</div>
-            <h2>{{:sede}}</h2>
+            <h3 align="center">{{:sede}}</h3>
             <div>DIRECCION:</div>
-            <h2>{{:direccion}}</h2>
+            <h3 align="center">{{:direccion}}</h3>
             <div class="documentos">DOCUMENTO: <b>{{:documentoDespacho.prefijo}} - {{:documentoDespacho.numero}}</b></div>
             
             <!--span class="numero_caja_span">NUMERO </span-->
