se corrige sincronizacion con santasofia

--- a/app_modules/MovimientosBodega/E008/reports/rotulos.html
+++ b/app_modules/MovimientosBodega/E008/reports/rotulos.html
@@ -54,7 +54,7 @@
             </strong>
             <h2>((((( DELICADO ))))</h2>
 
-            <hr class="separador"/>
+            <!--<hr class="separador"/>-->
 <!--            {{if numero_caja % 2 == 0}}
                 <div class='page-break'></div>
             {{/if}}-->
@@ -77,7 +77,7 @@
             </strong>
             <h2>((((( DELICADO ))))</h2>
 
-            <hr class="separador"/>
+            <!--<hr class="separador"/>-->
 <!--            {{if numero_caja % 2 == 0}}
                 <div class='page-break'></div>
             {{/if}}-->
