cambio de oc para clientes en lugar de bodegas

--- a/app_modules/OrdenesCompra/reports/orden_compra.html
+++ b/app_modules/OrdenesCompra/reports/orden_compra.html
@@ -91,7 +91,8 @@
                     <br />
                     <b>Estado orden :</b> {{:orden_compra.descripcion_estado}}
                      <br />
-                     <b>Destino :</b> {{:orden_compra.descripcion_bodega_destino}}  {{:orden_compra.ubicacion_bodega_destino}}
+                     <!--<b>Destino :</b> {{:orden_compra.descripcion_bodega_destino}}  {{:orden_compra.ubicacion_bodega_destino}}-->
+                     <b>Destino :</b> {{:orden_compra.nombre_destino}}  {{:orden_compra.direccion_destino}}
                      <br /> 
                      <br />
                     <b>ENVIAR CERTIFICADOS DE CALIDAD, FECHA DE VENCIMIENTO NO MENOR A 2 AÑOS, MARCAR USO INSTITUCUONAL PROHIBIDA SU
